# editplan4resolve

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.MD  CODEX_PROPOSAL.md  INSTALL_PLUGIN.md  README.md  VideoForge LLM Instructions.md  pyproject.toml
.claude/: settings.local.json
VideoForge/: errors.py
VideoForge/adapters/: audio_adapter.py  audio_sync.py  beat_detector.py  beat_subprocess.py  beat_worker.py  broll_adapter.py  embedding_adapter.py  mediapipe_subprocess.py  mediapipe_worker.py  opencv_subprocess.py  opencv_worker.py  sam3_adapter.py  sam3_subprocess.py  sam3_worker.py  sam_audio_adapter.py  sam_audio_subprocess.py  sam_audio_worker.py  scene_detector.py  sync_subprocess.py  sync_worker.py  video_analyzer.py  voice_detector.py
VideoForge/agent/: __init__.py  executor.py  guardrails.py  memory.py  planner.py  runtime.py  (+1 more)
docs/: audio_sync_phase8_report.md  library_expansion_phase7_report.md  library_manager_phase5_report.md  opencv_integration.md  opencv_phase4_report.md  sam_phase6_report.md  sam_wsl_setup.md
scripts/: generate_comfyui_sidecars.py  generate_sidecars.py
tests/: test_audio_adapter_cmd.py  test_config_manager.py  test_db_fts.py  test_embedding_adapter.py  test_indexer_integration.py  test_llm_instructions_modes.py  test_opencv_install.py  test_opencv_integration.py  test_opencv_worker_subprocess.py  test_query_generator.py  test_sam_integration.py  test_sampling.py  test_segment_store_replace_all_sentences.py  test_srt_parser.py  test_sync_matcher.py  test_timeline_builder.py  test_transcript_utils.py  test_video_analyzer.py
videoforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+76 files in other folders)
